# genericMlLib

./: .gitignore  README.md  Untitled.ipynb  bla_test.py  test_notebook.ipynb
.ipynb_checkpoints/: test_notebook-checkpoint.ipynb
rust_grad/: Cargo.toml
rust_grad/src/: lib.rs
src/: get_mnist.py  neural.py  tensor.py  util.py  variables.py
