[package]
name = "rust_grad"
version = "0.1.0"
authors = ["Jonas Sindlinger <jonas.sindlinger@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="rust_grad"
crate-type = ["cdylib"]

[dependencies.pyo3]
version="0.12.3"
features = ["extension-module"]
